--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
    font-family: cursive; 
+   transition: background-color 0.3s, color 0.3s;
 }
 
 .row {
@@ -76,3 +77,26 @@ margin-left: 50px;
     text-align: center;
     line-height: 50px;
   }
+
+
+  .light-mode {
+
+    background-color : white; 
+    color: black; 
+  }
+
+  .dark-mode {
+
+    background-color: black;
+    color: white;
+  }
+
+  .toggle-button {
+    position: absolute;
+    border-radius: 2px;
+    cursor: pointer;
+    margin-left: 1172px; 
+    margin-bottom: 10px;
+    width: 80px;
+    border: 3px solid;
+    font-size: 12px; }
